junk annex deleted: The annex shouldn't be there and consisted only of redundant or obsolete text

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -9058,103 +9058,8 @@ widespread than anticipated and thus such documentation is warranted.
 % OMG maintains the registry as an informative resource governed by the
 % standard.  The registry contents itself is informative.
 % %will not be normative; however, it is
-% %expected to become the basis for normative activities.
-
-\cleardoublepage
-\infannex{Conformance of OWL 2 DL With \DOL}\label{a:owl}
-\sclause{General}
-\CLnote{Is it correct that ``With'' and ``of'' use different capitalizations?}%
-\CLnote{Why refer to this external paper when \SROIQ is actually formalized as an institution below?  Maybe cut this sentence and replace it by a general introduction?  Or at least rephrase ``is established'' into ``has originally been established''.}%
-The semantic conformance of OWL 2 DL (as specified in \nref{OWL2}) with \DOL
-is established in \cite{OntoGraph}.
-
-\sclause{Abstract Syntax Conformance of OWL 2 With \DOL}
-
-The metaclass \syntax{OWL Ontology} is a subclass (in the sense of SMOF \nref{SMOF}
-multiple classification) of \syntax{NativeDocument}.
-The metaclass \syntax{OWL Universe} is a subclass (in the sense of SMOF \nref{SMOF}
-multiple classification) of \syntax{BasicOMS}.
-
-
-\sclause{Conformance of the OWL Serializations With \DOL}\label{a:owl-serializations}
-
-\begin{figure}
-  \centering
-    \includegraphics[width=0.4\textwidth]{illustrations/web-entity.png}
-  \caption{DOL term ontology: Web entities}
-  \label{fig:web-entity}
-\end{figure}
-
-
-\begin{figure}
-  \centering
-    \includegraphics[width=0.4\textwidth]{illustrations/process.png}
-  \caption{DOL term ontology: Processes}
-  \label{fig:process}
-\end{figure}
-
-
-\begin{figure}
-  \centering
-    \includegraphics[width=0.4\textwidth]{illustrations/tool.png}
-  \caption{DOL term ontology: Tools}
-  \label{fig:tool}
-\end{figure}
-
-
-
-
-The top level object properties are structured in a way similar 
-to that of the top-level classes, see Fig.~\ref{fig:dol-onto-properties}.
-\medskip
-
-\begin{figure}
-  \centering
-    \includegraphics[width=0.4\textwidth]{illustrations/dol-onto-properties.png}
-  \caption{DOL term ontology: Properties}
-  \label{fig:dol-onto-properties}
-\end{figure}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\sclause{\DOL Registry}\label{a:registry}
-
-OMG hosts a registry for DOL-conforming languages and translations. This registry will enable the 
- use of other DOL-conforming languages than the ones that are discussed in this OMG Specification. 
-The registry also includes descriptions of DOL-conforming languages and translations (as well as 
- other information needed by implementors and users) in both human-readable and 
-machine-processable form.
-
-OMG maintains the registry as an informative resource governed by the standard. The registry 
- contents itself is informative. 
-
-% %  \ednote{This paragraph has merely been moved.}
-% It is expected that \DOL will be used for other languages than the  set of \DOL-conforming
-% languages that are discussed in this \IS. OMG hosts a
-% \textbf{\termref{registry} for
-%  \DOL-conforming languages and translations}.
 % %
-% %There is a  \textbf{\termref{registry} for
-% %\DOL-conforming languages and translations} hosted
-% %at \url{http://purl.net/DOL/registry}.
-% The registry  also includes descriptions of
-% \DOL-conforming languages and translations (as well as other information needed by implementors
-% and users) in both human-readable and machine-processable form.
-%
-% %There will be Maintenance Authority (MA) {or, depending on advisability, a Registration
-% %Authority} established to
-%
-% OMG maintains the registry as an informative resource governed by the
-% standard.  The registry contents itself is informative.
-% %will not be normative; however, it is
-% %expected to become the basis for normative activities.
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\cleardoublepage
 \infannex{Conformance of OWL 2 DL With \DOL}\label{a:owl}
 \sclause{General}
 \CLnote{Is it correct that ``With'' and ``of'' use different capitalizations?}%
@@ -13592,7 +13497,7 @@ i.e. for each set $A$, $\iota : \mathcal{P}_{\mathit{fin}}(A)\to\mathcal{P}(A)$ 
 function (each finite subset of a set is also a subset of the set).
 \end{example}
 
-\cleardoublepage
+
 %\infannex{Bibliography}
 
 
@@ -13637,13 +13542,16 @@ function (each finite subset of a set is also a subset of the set).
 
 ~\todonote[author=Christoph Lange,date=D:201108220027+02'00',type=fyi]{Up to this line, all entries are sorted in the order of their appearance in the text.}
 
-\begin{center}\hrule\end{center}
 
+\cleardoublepage
+
+%\begin{center}\hrule\end{center}
+\infannex{References}
 \bibliographystyle{plain} 
-\renewcommand{\bibname}{References}
+\renewcommand{\bibname}{}
 \label{a:bibliography}
 \bibliography{dol,rfc,tptp,dol-papers}
-\addcontentsline{toc}{chapter}{References}
+%\addcontentsline{toc}{chapter}{References}
 
 \end{document}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
