For some reason, the iso style file artificially prevents "Annex O". I commented that out.

--- a/Standard/isov2.cls
+++ b/Standard/isov2.cls
@@ -436,8 +436,8 @@
     \setcounter{sclause}{0}
     \zerocounters
     \refstepcounter{annex}
-    \ifnum 9=\value{annex} \refstepcounter{annex}\fi
-    \ifnum 15=\value{annex} \refstepcounter{annex}\fi
+%    \ifnum 9=\value{annex} \refstepcounter{annex}\fi
+ %   \ifnum 15=\value{annex} \refstepcounter{annex}\fi
 %%%    \ifnum 1=\value{annex}
        \renewcommand{\clause}{%
          \ClassWarning{iso}{%
