hanging section titles

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -120,6 +120,27 @@
 \usepackage{hetonto-subset}
 %% \usepackage{diagrams}
 
+%% section titles
+
+\usepackage{titlesec}
+
+\titleformat{name=\clause}
+  {\normalfont\Large\bfseries}{\theclause}{2em}{\hspace{-1em}}{}
+\titleformat{name=\clause,numberless}
+  {\normalfont\Large\bfseries}{}{1em}{\hspace{-1em}}{}
+\titleformat{name=\sclause}
+  {\normalfont\large\bfseries}{\thesclause}{2em}{\hspace{-1em}}{}
+\titleformat{name=\sclause,numberless}
+  {\normalfont\large\bfseries}{}{1em}{\hspace{-1em}}{}
+\titleformat{name=\ssclause}
+  {\normalfont\bfseries}{\thessclause}{2em}{\hspace{-1em}}{}
+\titleformat{name=\ssclause,numberless}
+  {\normalfont\bfseries}{}{1em}{\hspace{-1em}}{}
+\titleformat{name=\sssclause}
+  {\normalfont\bfseries}{\thesssclause}{2em}{\hspace{-1em}}{}
+\titleformat{name=\sssclause,numberless}
+  {\normalfont\bfseries}{}{1em}{\hspace{-1em}}{}
+
 %% Utilities
 \usepackage{etoolbox}
 \usepackage{ifmtarg}
