deleted sentence about syntax convention  for keywords since the convention is not really used.

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -869,11 +869,12 @@ The type styles shown below are used in this document to distinguish
 % bold texttt fuer keywords 
 % lstlisting for grammar
 \medskip \noindent
-Computer Modern Roman -- 10 pt.: Standard body text
+Computer Modern Roman 10 pt.: Standard body text
 
-\lstinline{Computer Modern Typewriter -- 10 pt.}: DOL code and DOL syntax elements
+\lstinline{Computer Modern Typewriter 10 pt.}: DOL code and DOL syntax elements
 
-\textbf{\lstinline{Computer Modern Typewriter -- 10 pt. Bold}}: keywords in DOL code
+%\lstinline[keywordstyle=\color{black}\bfseries\underbar, keywords={Computer, Modern, Typewrite, 10, pt.}]{Computer Modern Typewriter 10 pt. Bold:} keywords in DOL code
+
 
 
 %
