- Change default tt-font - Updated text on font convention - now syntax highlighting in lstlisting environments works again

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -91,6 +91,8 @@
 \usepackage[english]{babel}
 \usepackage{textcomp}
 
+\renewcommand{\ttdefault}{pcr} % Select courier as default tt-fontstyle because Computer Modern has no bold font implemented
+
 %%\usepackage{lmodern} % FN: commented out since OMG wants its own fonts
 %%\usepackage[scaled=.8]{beramono} % FN: commented out since OMG wants its own fonts
 %\usepackage{courier}
@@ -869,11 +871,11 @@ The type styles shown below are used in this document to distinguish
 % bold texttt fuer keywords 
 % lstlisting for grammar
 \medskip \noindent
-Computer Modern Roman 10 pt.: Standard body text
+Computer Modern Roman: Standard body text
 
-\lstinline{Computer Modern Typewriter 10 pt.}: DOL code and DOL syntax elements
+\lstinline{Courier}: DOL code and DOL syntax elements
 
-%\lstinline[keywordstyle=\color{black}\bfseries\underbar, keywords={Computer, Modern, Typewrite, 10, pt.}]{Computer Modern Typewriter 10 pt. Bold:} keywords in DOL code
+\lstinline[keywordstyle=\color{black}\bfseries, keywords={Courier, bold}]{Courier bold}: keywords in DOL code
 
 
 
