ednotes; small correction

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -2486,7 +2486,8 @@ An abstract syntax can be specified as a MOF metamodel \nref{MOF}. Then abstract
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \sclause{Semantics}
-
+\ednote{replace ``model'' (in an institution) by ``realisation'',
+in order to avoid confusion with ``model'' in the sense of ``MDE model''?}
 \begin{definitions}
 
 
@@ -3643,8 +3644,8 @@ Fig.~\ref{fig:state-machine} & stm & state machine\\\hline
                 %% descriptions of logics ...
 library ATM
 
-view cd2stm = cd refined to { atm hide along stm2cd} end
-view cd2psm = cd refined to { psm hide along psm2cd} end
+refinement cd2stm = cd refined to { atm hide along stm2cd} end
+refinement cd2psm = cd refined to { psm hide along psm2cd} end
 network ATM_network = %consistent
                       cd, stm, psm, cmp,
                       cd2stm, cd2psm, abstract_to_concrete_atm
