--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -7136,7 +7136,7 @@ is
 $$sem(\Gamma, O) = (\Gamma'',(\cI'',\Sigma'',\cM'',\Delta''))$$
 \noindent where
 \begin{itemize}
-  \item $\\cI'' = \cI'$
+  \item $\cI'' = \cI'$
   \item $\Sigma'' = \Sigma\setminus \Sigma'$ 
   \item $\Delta'' = \Delta\cap\Sen(\Sigma'')\setminus\Delta'$
   \item $\cM''$ is the class of all $\Th(O)$-models.
@@ -7154,7 +7154,7 @@ The semantics of an \syntax{UnionOMS} $O$ is
 $$sem(\Gamma, O) = (\Gamma'',(\cI',\Sigma',\cM',\Delta'))$$
 \noindent where
 \begin{itemize}
-  \item $\\cI' = \cI$ where
+  \item $\cI' = \cI$ where
     $\Inst(O_1) \bigcup \Inst(O_2) =(\cI, (\Phi_1, \alpha_1,\beta_1) : \Inst(O_1) \rightarrow \cI, 
                     (\Phi_2, \alpha_2,\beta_2) : \Inst(O_2) \rightarrow \cI)$
   \item $\Sigma' = \Phi_1(\Sig(O_1)) \cup \Phi_2(\Sig(O_2))$
