Issue 344  "view" replaced by "refinement" closed

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -47,6 +47,8 @@
 %
 
 
+
+
 \textwidth 17.5cm
 \hoffset -0.7cm
 \textheight 24cm
@@ -3656,8 +3658,8 @@ Fig.~\ref{fig:state-machine} & stm & state machine\\\hline
                 %% descriptions of logics ...
 library ATM
 
-view cd2stm = cd refined to { atm hide along stm2cd} end
-view cd2psm = cd refined to { psm hide along psm2cd} end
+refinement cd2stm = cd refined to { atm hide along stm2cd} end
+refinement cd2psm = cd refined to { psm hide along psm2cd} end
 network ATM_network = %consistent
                       cd, stm, psm, cmp,
                       cd2stm, cd2psm, abstract_to_concrete_atm
