ODM meta classes + reference

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -9111,9 +9111,9 @@ is established in \cite{OntoGraph}.
 
 \sclause{Abstract Syntax Conformance of OWL 2 With \DOL}
 
-The metaclass \syntax{OWL Ontology} is a subclass (in the sense of SMOF
+The metaclass \syntax{OWLOntology}~\nref[11.2]{nref-ODM} is a subclass (in the sense of SMOF
 multiple classification) of \syntax{NativeDocument}.
-The metaclass \syntax{OWL Universe} is a subclass (in the sense of SMOF
+The metaclass \syntax{OWLUniverse}~\nref[11.7]{nref-ODM} is a subclass (in the sense of SMOF
 multiple classification) of \syntax{BasicOMS}.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
