--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -504,6 +504,7 @@ author=,date=,id=,replyto=,type=}{}%
 \renewcommand{\eref}[1]{\examplerefname~\ref{#1}}
 \renewcommand{\fref}[1]{\figurerefname~\ref{#1}}
 \renewcommand{\nref}[1]{\noterefname~\ref{#1}}
+\newcommand{\nreff}[2]{\noterefname~\ref{#1}, #2}
 \renewcommand{\tref}[1]{\tablerefname~\ref{#1}}
 \renewcommand{\pref}[1]{\pagerefname~\pageref{#1}}
 \newcommand{\rtm}[0]{\small{\textregistered\xspace}}
@@ -9111,9 +9112,9 @@ is established in \cite{OntoGraph}.
 
 \sclause{Abstract Syntax Conformance of OWL 2 With \DOL}
 
-The metaclass \syntax{OWLOntology}~\nref[11.2]{nref-ODM} is a subclass (in the sense of SMOF
+The metaclass \syntax{OWLOntology}~\nreff{nref-ODM}{11.2} is a subclass (in the sense of SMOF
 multiple classification) of \syntax{NativeDocument}.
-The metaclass \syntax{OWLUniverse}~\nref[11.7]{nref-ODM} is a subclass (in the sense of SMOF
+The metaclass \syntax{OWLUniverse}~\nreff{nref-ODM}{11.7} is a subclass (in the sense of SMOF
 multiple classification) of \syntax{BasicOMS}.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
