--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -9111,9 +9111,9 @@ is established in \cite{OntoGraph}.
 
 \sclause{Abstract Syntax Conformance of OWL 2 With \DOL}
 
-The metaclass \syntax{OWLOntology}~\nref{nref-ODM}, 11.2 is a subclass (in the sense of SMOF
+The metaclass \syntax{OWLOntology}~\nref{ODM}, 11.2 is a subclass (in the sense of SMOF
 multiple classification) of \syntax{NativeDocument}.
-The metaclass \syntax{OWLUniverse}~\nref{nref-ODM}, 11.7 is a subclass (in the sense of SMOF
+The metaclass \syntax{OWLUniverse}~\nref{ODM}, 11.7 is a subclass (in the sense of SMOF
 multiple classification) of \syntax{BasicOMS}.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
