--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -9538,9 +9538,9 @@ We distinguish three cases.
 
 \sclause{Abstract Syntax Conformance of Common Logic With \DOL}
 
-The metaclass \syntax{Text} is a subclass (in the sense of SMOF \nref{SMOF}
+The metaclass \syntax{Text} \syntax{OWLOntology}~\nref{ODM}, 12.2 is a subclass (in the sense of SMOF \nref{SMOF}
 multiple classification) of \syntax{NativeDocument}.
-The metaclass \syntax{Sentence} is a subclass (in the sense of SMOF \nref{SMOF}
+The metaclass \syntax{Sentence}~\nref{ODM}, 12.2 is a subclass (in the sense of SMOF \nref{SMOF}
 multiple classification) of \syntax{BasicOMS}.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
