OMD ref for RDF

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -9632,9 +9632,9 @@ in order to obtain a theory in the \CL institution.
 
 \sclause{Abstract Syntax Conformance of RDF and RDF Schema  With \DOL}
 
-The metaclass \syntax{Document} is a subclass (in the sense of SMOF \nref{SMOF}
+The metaclass \syntax{rdfDocument}~\nref{ODM}, 14.2.2 is a subclass (in the sense of SMOF \nref{SMOF}
 multiple classification) of \syntax{NativeDocument}.
-The metaclass \syntax{Triple} is a subclass (in the sense of SMOF \nref{SMOF}
+The metaclass \syntax{graph}~\nref{ODM}, 14.2.3 is a subclass (in the sense of SMOF \nref{SMOF}
 multiple classification) of \syntax{BasicOMS}.
 
 
