metaclasses for UML

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -9729,9 +9729,9 @@ operations are query operations.
 
 \sclause{Abstract Syntax Conformance of UML With \DOL}
 
-The metaclass \syntax{OWL Model} is a subclass (in the sense of SMOF \nref{SMOF}
+The metaclass \syntax{Package}~\nref{UML} is a subclass (in the sense of SMOF \nref{SMOF}
 multiple classification) of \syntax{NativeDocument}.
-The metaclass \syntax{OWL PackageableElement} is a subclass (in the sense of SMOF \nref{SMOF}
+The metaclass \syntax{PackageableElement}~\nref{UML} is a subclass (in the sense of SMOF \nref{SMOF}
 multiple classification) of \syntax{BasicOMS}.
 
 \sclause{Serialization Conformance of UML With \DOL}
