metaclasses for TPTP

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -10751,9 +10751,9 @@ The underlying logic is unsorted first-order logic.
 
 \sclause{Abstract Syntax Conformance of TPTP With \DOL}
 
-The metaclass \syntax{TPTP\_file} is a subclass (in the sense of SMOF \nref{SMOF}
+The BNF nonterminal \syntax{TPTP\_file}~\cite{TPTP-BNF} is construed as a metaclass, and as such it is a subclass (in the sense of SMOF \nref{SMOF}
 multiple classification) of \syntax{NativeDocument}.
-The metaclass \syntax{annotated\_formula} is a subclass (in the sense of SMOF \nref{SMOF}
+The BNF nonterminal \syntax{annotated\_formula}~\cite{TPTP-BNF} is construed as a metaclass, and as such is a subclass (in the sense of SMOF \nref{SMOF}
 multiple classification) of \syntax{BasicOMS}.
 
 \sclause{Serialization Conformance of TPTP With \DOL}
