--- a/Standard/tptp.bib
+++ b/Standard/tptp.bib
@@ -53,3 +53,11 @@ for Automated Theorem Proving},
   note = 	 {\url{http://www.tptp.org}},
 }
 
+
+@Unpublished{TPTP-BNF,
+  author = 	 {G. Sutcliffe},
+  title = 	 {TPTP Documents File: SyntaxBNF},
+  note = 	 {\url{http://www.cs.miami.edu/~tptp/cgi-bin/SeeTPTP?Category=Documents&File=SyntaxBNF}},
+}
+
+
