--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -10751,9 +10751,9 @@ The underlying logic is unsorted first-order logic.
 
 \sclause{Abstract Syntax Conformance of TPTP With \DOL}
 
-The BNF nonterminal of the TPTP concrete syntax \syntax{TPTP\_file}~\cite{TPTP-BNF} is construed as a metaclass, and as such it is a subclass (in the sense of SMOF \nref{SMOF}
+The BNF nonterminal \syntax{TPTP\_file} of the TPTP concrete syntax~\cite{TPTP-BNF} is construed as a metaclass, and as such it is a subclass (in the sense of SMOF \nref{SMOF}
 multiple classification) of \syntax{NativeDocument}.
-The BNF nonterminal of the TPTP concrete syntax \syntax{annotated\_formula}~\cite{TPTP-BNF} is construed as a metaclass, and as such is a subclass (in the sense of SMOF \nref{SMOF}
+The BNF nonterminal \syntax{annotated\_formula} of the TPTP concrete syntax~\cite{TPTP-BNF} is construed as a metaclass, and as such is a subclass (in the sense of SMOF \nref{SMOF}
 multiple classification) of \syntax{BasicOMS}.
 
 \sclause{Serialization Conformance of TPTP With \DOL}
@@ -10784,9 +10784,9 @@ sentences, expressing the (free) generation of datatypes.
 
 \sclause{Abstract Syntax Conformance of CASL With \DOL}
 
-The EBNF nonterminal for the \CASL abstract syntax \syntax{LIBRARY}~\cite{CASL-RM} is construed as a metaclass, and as such it is a subclass (in the sense of SMOF \nref{SMOF}
+The EBNF nonterminal \syntax{LIBRARY} for the \CASL abstract syntax~\cite{CASL-RM} is construed as a metaclass, and as such it is a subclass (in the sense of SMOF \nref{SMOF}
 multiple classification) of \syntax{NativeDocument}.
-The EBNF nonterminal for the \CASL abstract syntax \syntax{BASIC\_SPEC}~\cite{CASL-RM} is construed as a metaclass, and as such it is a subclass (in the sense of SMOF \nref{SMOF}
+The EBNF nonterminal \syntax{BASIC\_SPEC} for the \CASL abstract syntax~\cite{CASL-RM} is construed as a metaclass, and as such it is a subclass (in the sense of SMOF \nref{SMOF}
 multiple classification) of \syntax{BasicOMS}.
 
 \sclause{Serialization Conformance of CASL With \DOL}
